<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/Age"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".add_renterer_info_cont">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="451dp"
            android:layout_height="1075dp"
            android:contentDescription="@string/bg_img"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/foinal"
            tools:ignore="MissingConstraints,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/add_Information"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/First_Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ash"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Last_Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ash"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Fathers_Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ash"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="131dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Mothers_Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ash"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nid"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ash"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fathers_nid"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ash"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName7"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"
            tools:ignore="MissingConstraints" />


        <EditText
            android:id="@+id/editTextTextPersonName88"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Birthdate"
            android:inputType="datetime"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ash"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName10"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Age"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/ash"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName88"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName88"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName88"
            tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/arrival_date"
            android:inputType="datetime"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#BCAAA4"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName11"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName11"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/department"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#BCAAA4"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName9"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName112"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/session"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName12"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName1121"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/year"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName112"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName112"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName112"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/choose_pic"
            android:layout_width="171dp"
            android:layout_height="48dp"
            android:layout_marginEnd="226dp"
            android:text="@string/Choose_Picture"
            android:textAllCaps="false"
            android:textColor="#4D4B4B"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName1121"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName1121"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName1121" />

        <Button
            android:id="@+id/submit"
            android:layout_width="171dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#4D4B4B"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/choose_pic"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/choose_pic"
            app:layout_constraintTop_toBottomOf="@+id/choose_pic"
            app:layout_constraintVertical_bias="0.055"
            tools:ignore="TouchTargetSizeCheck" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>